# mod-wsgi-van

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml  python-package.yml
src/mod_wsgi_van/: __init__.py  router.py  server.py
tests/: conftest.py  requirements.txt  test_router.py
tests/fixtures/: routers.py  servers.py
tests/fixtures/aries/wsgi/: app.py  dep.py
tests/fixtures/taurus/wsgi/: app.py  dep.py
tests/fixtures/virgo/wsgi/: app.py
