[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mod-wsgi-van"
version = "0.0.2"
authors = [
  { name="Jared Deckard", email="jared@shademaps.com" },
]
description = "Dynamically route mod_wsgi to mod_vhost_alias"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/deckar01/mod-wsgi-van"
"Bug Tracker" = "https://github.com/deckar01/mod-wsgi-van/issues"
